--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "npm-base-package",
-	"version": "0.0.0",
-	"description": "npm-base-package",
+	"name": "lesca-react-loading",
+	"version": "1.0.0",
+	"description": "simple loading component ",
 	"main": "lib/index.js",
 	"scripts": {
 		"start": "webpack-dev-server --mode development",
@@ -43,9 +43,9 @@
 		"webpack-dev-server": "^3.1.3"
 	},
 	"author": "jamehsu1125 <jameshsu1125@gmail.com>",
-	"homepage": "https://github.com/jameshsu1125/npm-base-package",
+	"homepage": "https://github.com/jameshsu1125/lesca-react-loading",
 	"repository": {
 		"type": "git",
-		"url": "git@github.com:jameshsu1125/npm-base-package.git"
+		"url": "git@github.com:jameshsu1125/lesca-react-loading.git"
 	}
 }
