--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "start": "webpack-dev-server --mode development",
     "watch": "babel --watch src/lib --out-dir lib --extensions '.ts,.tsx'",
+    "less": "less-watch-compiler",
+    "css": "copy-and-watch --watch src/lib/*.css lib/",
     "build": "NODE_ENV=production webpack",
     "deploy": "gh-pages -d dist",
-    "tsc": "npx tsc --watch",
-    "dev": "concurrently \"npm run tsc\" \"npm run watch\" \"npm run start\"",
+    "tsc": "tsc --watch",
+    "dev": "concurrently \"npm run tsc\" \"npm run less\" \"npm run css\" \"npm run watch\" \"npm run start\"",
     "rm": "rm -rf node_modules/ package-lock.json",
     "op": "babel src/lib -d lib --copy-files"
   },
@@ -35,6 +37,7 @@
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "concurrently": "^7.2.2",
+    "copy-and-watch": "^0.1.6",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "gh-pages": "^4.0.0",
@@ -43,6 +46,7 @@
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "less-vars-to-js": "^1.3.0",
+    "less-watch-compiler": "^1.16.3",
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.0",
     "prismjs": "^1.28.0",
